# sonosremote

./: Cargo.toml  README.md
src/: actions.rs  lib.rs  main.rs  parse_utils.rs  services.rs  speaker.rs
