[package]
name = "sonosremote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
rusty-sonos = "0.2.3"
tokio = { version = "1.35.1", features = ["full"] }
